<resources>
    <string name="app_name">AppleMarket</string>
    <string name="list_price">가격</string>
    <string name="list_place">장소</string>
    <string name="list_post">게시글 제목</string>
    <string name="list_like">30</string>
    <string name="list_town">삼산동</string>
    <string name="detail_tmp"><u>매너 온도</u></string>
    <string name="ic_detail_back">뒤로 가기 버튼</string>
    <string name="seller">난쉽</string>
    <string name="detail_place">동네 입력</string>
    <string name="detail_temperature">39.3°C</string>
    <string name="detail_title">제목</string>
    <string name="detail_detail">상품 소개</string>
    <string name="detail_price">제품 가격</string>
    <string name="detail_chat">채팅하기</string>
</resources>