<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/list_padding"
        >
        <ImageView
            android:id="@+id/iconItem"
            android:layout_width="@dimen/icon_size_lage"
            android:layout_height="@dimen/icon_size_lage"
            android:scaleType="centerCrop"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/pat_1"
            />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/list_post"
                android:textSize="@dimen/list_item_text_lage"
                android:paddingStart="@dimen/list_item_padding"
                />

            <TextView
                android:id="@+id/place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/list_place"
                android:textSize="@dimen/list_item_text_middle"
                android:paddingStart="@dimen/list_item_padding"
                />
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/list_price"
                android:textSize="@dimen/list_item_text_lage"
                android:textStyle="bold"
                android:paddingStart="@dimen/list_item_padding"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end"
                >
                <Space
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_width="@dimen/icon_size_mini"
                    android:layout_height="@dimen/icon_size_mini"
                    android:src="@drawable/ic_list_talk"
                    android:padding="@dimen/icon_padding"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/list_like"
                    android:paddingTop="@dimen/list_padding"
                    android:textSize="@dimen/list_item_text_middle"/>
                <ImageView
                    android:layout_width="@dimen/icon_size_mini"
                    android:layout_height="@dimen/icon_size_mini"
                    android:src="@drawable/ic_list_emty_like"
                    android:padding="@dimen/icon_padding"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/list_like"
                    android:paddingTop="@dimen/list_padding"
                    android:textSize="@dimen/list_item_text_middle"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        android:background="@android:color/darker_gray" />
</LinearLayout>